# poem_admin

./: Cargo.toml
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: route.rs
api/src/system/: common.rs  mod.rs  sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_update_log.rs  sys_user.rs  sys_user_online.rs
api/src/test/: mod.rs  test_data_scope.rs
app/: Cargo.toml
app/src/middleware/: cache.rs  fixed_res.rs  mod.rs
config/: config.toml.sample
configs/: Cargo.toml
db/: Cargo.toml
db/src/common/: ctx.rs  res.rs
db/src/test/models/: test_data_scope.rs
middleware-fn/: Cargo.toml
middleware-fn/src/: auth.rs  cache.rs  cache_skytable.rs  ctx.rs  fixed_res.rs  oper_log.rs
scheduled-task/: Cargo.toml
service/: Cargo.toml
service/src/service_utils/: jwt.rs
service/src/system/: common.rs  mod.rs  sys_job_log.rs  sys_menu.rs  sys_role.rs  sys_user.rs
service/src/tasks/: task_builder.rs
service/src/test/: test_data_scope.rs
utils/: Cargo.toml
utils/src/: api_utils.rs  lib.rs
