[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
configs = {path = "../configs"}
db = {path = "../db"}
app-service = {path = "../service"}
middleware-fn = {path="../middleware-fn"}
# poem 
poem = {workspace = true, features = ["static-files", "rustls", "compression", "multipart", "sse"]}
# 
futures = {workspace = true}
# 
tokio-stream = {workspace = true}
# 
serde_json = {workspace = true}
# 
tokio = {workspace = true, default-features = false}
#
anyhow = {workspace = true}

