[package]
name = "app-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
configs = {path = "../configs"}
db = {path = "../db"}
utils = {path = "../utils"}
# poem 
poem = {workspace = true, features = ["static-files", "rustls", "compression", "multipart", "sse"]}
#
anyhow = {workspace = true}
# 
headers = {workspace = true}
# jsonwebtoken
jsonwebtoken = {workspace = true}
# user-agent-parser
user-agent-parser = {workspace = true}
# serde
serde = {workspace = true, features = ["derive"]}
# 
once_cell ={workspace = true}
# 
reqwest = {workspace = true, features = ["json"]}
# 
serde_json = {workspace = true}
# 系统信息
sysinfo = {workspace = true}
# 计划任务
delay_timer = {workspace = true}



# 用于生成可排序的唯一id
scru128 = {workspace = true}
#  tokio
tokio = {workspace = true, features = ["rt-multi-thread", "macros", "parking_lot", "signal", "time"]}
# 验证码
captcha_rust = {workspace = true}
# 时间
chrono = {workspace = true, features = ["serde"]}
# tracing
tracing = {workspace = true}

# sea-orm
sea-orm = {workspace = true, default-features = false,features = ["macros", "runtime-tokio-native-tls","debug-print"]}


[features]
# default = ["postgres", "mysql"]
default = ["postgres", "mysql", "sqlite"]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]